k8s/base/shipments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipments
spec:
  type: ClusterIP
  selector:
    app: shipments
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
